<resources>
    <string name="app_name">CLAUDE MONET | Water Lilies</string>
    <string name="main_home_page_image">Home Page Background Image - Monet\'s Water Lilies</string>
    <string name="main_home_page_image_landscape">Home Page Background Image - Monet\'s Water Lilies</string>
    <string name="monet_great_project_first">The Nymphéas [Water Lilies] cycle occupied Claude Monet for three decades,
        from the late 1890s until his death in 1926, at the age of 86. This series was inspired by the water garden that
        he created at his Giverny estate in Normandy. It resulted in the final great panels donated by Monet to the French State
        in 1922, and which have been on display at the Musée de l’Orangerie since 1927. The word nymphéa comes from the Greek word
        numphé, meaning nymph, which takes its name from the Classical myth that attributes the birth of the flower to a nymph who
        was dying of love for Hercules. In fact, it is also a scientific term for a water lily. The famous water lily pond inspired
        Monet to create a colossal work composed of almost 300 paintings, over 40 of which were large format.</string>
    <string name="monet_great_project_second">Three tapestries were also woven from the Nymphéas paintings, thus affirming the
        decorative nature of these series. Two types of composition were defined by the artist at the beginning of the cycle. The
        first includes the edge of the pond and its dense vegetation: that is seen in the Bassins aux nymphéas of 1899-1900
        [Water Lily Pond], then in the Pont japonais [Japanese Bridge] from the later years. The second, in contrast, plays on the
        emptiness, and includes only the surface of the water with flowers and reflections interspersed. This is seen in the
        Paysages d\'eau [Water Landscapes] (1903-1908), close-ups in a tightly framed composition, organised in series, in which
        each element is presented as a fragment. This composition is also, and above all, a wall decoration. Although the idea for
        the project to create a circular series of decorative paintings had been taking shape since 1897, it was in 1914 that the
        painter decided henceforth to put all his energies into producing his "great decoration". This one took its final form in
        the arrangement in the Orangerie: a panoramic frieze laid out almost seamlessly, and enveloping the viewer in two
        elliptical rooms.</string>
    <string name="trees_reflections_inset_artist">Claude Monet</string>
    <string name="clouds_inset_title">Water Lilies :\nThe Clouds &#8211; inset</string>
    <string name="trees_reflections_inset_title">Water Lilies :\nTrees Reflections &#8211; inset</string>
    <string name="water_lilies_morning_inset_title">Water Lilies :\nMorning &#8211; inset</string>
    <string name="trees_reflections_inset_year">1915&#8211;1926</string>
    <string name="trees_reflections_inset_click_to_view">(Click to view)</string>
    <string name="eight_panels_first">The Musée de l’Orangerie houses 8 of the great Nymphéas [Water Lilies] compositions by Monet
         created from various panels assembled side by side. These compositions are all the same height (1,97m) but differ in length
        so that they could be hung across the curved walls of two egg-shaped rooms. The artist left nothing to chance with this set of
        paintings that he had long pondered over and that were displayed according to his wishes in conjunction with the architect
        Camille Lefèvre and with the help of Clemenceau. He planned out the forms, volumes, positioning, rhythm and the spaces between
        the various panels, the unguided experience of the visitor through several entrances to the room, the daylight coming in from
        above that floods the space when the sun is out or which is more discreet when the sun is masked by clouds, thus making the
        paintings resonate according to the weather.</string>
    <string name="eight_panels_second">The whole set is one of the most vast and monumental creations in painting made in the first half
        of the 20th century and covers a surface area of 200m2. The dimensions and area covered by the painting envelop the viewer in over
        nearly 100 linear metres, where a landscape of water punctuated with water lilies, willow branches, reflections of trees and
        clouds unfolds, creating "the illusion of an endless whole, of a wave with no horizon and no shore" as Monet put it. The paintings
        and their layout echo in the orientation of the building, as the placement of scenes with sunrise hues are to the east and those
        with hues of the sunset are to the west. Thus, the representation of a continuum in time and space is materialised. In an equally
        suggestive way, the elliptical shape of the rooms draws out the mathematical symbol for infinity. The Water Lilies paintings at
        the Musée de l\'Orangerie have sometimes had to contend with various events and happenings. In particular, the roof of the second
        room was damaged during the 1944 bombings as well as one of the compositions, while the other panels remained miraculously unharmed. The 2006 renovation was also the chance to restore the Water Lilies room to its original state, a state that had been lost during the renovation work done in the 1960s that obstructed the natural light Monet had wanted.</string>
    <string name="posterity_first">A gift from Claude Monet to France given the day after the armistice of November 11, 1918,
        the Water Lilies paintings were displayed according to his design in the Orangerie in 1927 a few months after his death.
        However, the set of paintings was not met with public enthusiasm at that time. In fact, in 1927 Impressionism seemed to be
        discredited by the artistic revival advocated by the avant-garde that had burst onto the scene in the early 20th century:
        Fauvism, Cubism, Futurism, Dada, Surrealism, etc. The public stayed away from the Water Lilies rooms for several decades
        still to come. The museum itself sometimes even built temporary walls up around them to hang paintings for temporary exhibitions,
        thus hiding Monet\'s work. It wasn\'t until after the Second World War and particularly with the arrival of a new modern art
        hall in New York that a new glance was cast upon the work of the late Monet. In the 1950s, signs of renewed interest multiplied:
        in 1952 André Masson published an article comparing the rooms of the Orangerie to "the Sistine Chapel of Impressionism", private
        collectors began purchasing paintings from the Water Lilies collection that remained in the painter\'s studio, and most of all
        the MOMA in New York purchased and displayed one of the great paintings in 1955. Subsequently, numerous formal similarities
        came to light between the abstract art of the New York School that had characterised artistic production from the late 1940s
        in the United States (Pollock, Rohtko, Newman, Still, etc.), and the lyrical abstraction in Europe and the old master\'s creations.</string>
    <string name="posterity_second">In fact the appearance of Monet\'s Water Lilies was like the birth of decentralised painting in the
        West where no one part of the painting dominates another, creating an All-Over painting style. American art critic Clement
        Greenberg revealed this line of descent and showed how Monet\'s testament work was the catalyst for a new style of painting.
        The fascination of the Water Lilies cast over the public and over artists remained unchanged with later generations. Joan Mitchell,
        Riopelle, Sam Francis to cite just a few&#8230; But beyond the All-Over style, Monet also invented something that today seems
        common but was ahead of the times in his era: the idea of environment that has fed all currents of art all the way through
        to the present, from Minimalism to the most contemporary generations. Numerous artistic achievements creating a space dedicated
        to artistic contemplation can also be seen as a legacy of the Water Lilies of the Orangerie. In particular the Rothko Chapel
        in Houston, Barnett Newman\'s Stations de la Croix [Stations of the Cross] in the National Gallery in Washington as well as
        Twombly\'s La Bataille de Lépante [The Battle of Lepanto] at the Brandhorst Museum in Munich come to mind.</string>
    <string name="main_quiz_title">Quiz</string>
    <string name="quiz_description">Test what you\'ve learned about Monet\'s Water Lilies cycle. Click on the light bulbs for helpful hints to some of the answers.</string>
    <string name="question_01">Monet\’s Nymphéas cycle is sometimes referred to as The Water Lilies of the</string>
    <string name="question_01_title">Question 1</string>
    <string name="answer_01_hint">Type your answer here</string>
    <string name="question_02_title">Question 2</string>
    <string name="question_02">Numerous formal similarities have been shown between the lyrical abstraction of Monet\’s Water Lilies
        and the abstract art of the New York School, including the work of artists:</string>
    <string name="answer_02a">Pollock</string>
    <string name="answer_02b">Duchamp</string>
    <string name="answer_02c">Rothko</string>
    <string name="question_03_title">Question 3</string>
    <string name="question_03">The Musée d l\’Orangerie houses how many of the great Nymphéas compositions by Monet?</string>
    <string name="answer_03a">5</string>
    <string name="answer_03b">8</string>
    <string name="answer_03c">12</string>
    <string name="question_04_title">Question 4</string>
    <string name="question_04">Two types of compositions were defined by Monet early in the Water Lily series.
        The two types of composition are:</string>
    <string name="answer_04a">Bassins aux nymphéas</string>
    <string name="answer_04b">Paysages d\’eau</string>
    <string name="answer_04c">Nymphéas</string>
    <string name="question_05_title">Question 5</string>
    <string name="question_05">The Greek word Nymphaea is the scientific term for a</string>
    <string name="answer_05_hint">Type your answer here</string>
    <string name="answer_05"> Water Lily</string>
    <string name="question_06_title">Question 6</string>
    <string name="question_06">With the help of the architect Camille Lefèvre, Monet planned out the space that would
        house the Nymphéa Series including the:</string>
    <string name="answer_06a">Forms</string>
    <string name="answer_06b">Volumes</string>
    <string name="answer_06c">Positioning</string>
    <string name="question_07_title">Question 7</string>
    <string name="question_07">Monet worked on the Water Lilies series for 3 decades until his death in:</string>
    <string name="app_main_artist_title">Claude Monet</string>
    <string name="app_main_subject_title">The Nymphéas [Water Lilies]</string>
    <string name="app_main_entry_button_text">Explore</string>
    <string name="main_content_image_1">water lilies,the clouds</string>
    <string name="main_content_subhead_1">Monet\'s Great Project</string>
    <string name="main_content_inset_1_description">water lilies,the clouds</string>
    <string name="main_content_image_2">water lilies green reflections</string>
    <string name="main_content_subhead_2">Eight Panels, a unique exhibition</string>
    <string name="main_content_inset_image_2_description">water lilies tree reflections inset</string>
    <string name="main_content_subhead_3">The Posterity of Water Lilies</string>
    <string name="main_content_inset_3_description">water lilies morning inset</string>
    <string name="test_your_knowledge_button_text">Test Your Knowledge</string>
    <string name="main_content_image_3_description">Water Lilies Morning</string>
</resources>