<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_relative_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/monet_water_lilies_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/main_home_page_image"
        android:scaleType="centerCrop"
        android:src="@drawable/monet_home_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <TextView
            android:id="@+id/artist_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oswald_light"
            android:gravity="center"
            android:shadowColor="@color/colorPrimaryDark"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="4"
            android:text="@string/app_main_artist_title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="47sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorAccent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oswald"
            android:gravity="center"
            android:shadowColor="@color/colorPrimaryDark"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="4"
            android:text="@string/app_main_subject_title"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />


        <Button
            android:id="@+id/order_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="140dp"
            android:background="@drawable/rounded_btn_bkg"
            android:fontFamily="@font/oswald"
            android:onClick="explore"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/app_main_entry_button_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>